# TradingSystem

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
agent/tools/: fetch_longterm_prices.py  fetch_news.py  fetch_prices.py
app/: dependencies.py  main.py
app/api/: analyze_price.py  fetch_news.py
app/database/: config.py  lifespan.py  tables.py
app/news/: get_news.py
app/schemas/: news_schema.py  prices_schema.py
app/services/: get_fear_greed.py  get_news.py  get_prices.py
app/utils/: currency_validation.py  validate_pydantic.py
tests/: conftest.py  test_clients.py  test_schemas.py
